2024-05-05  Araki Ken  <arakiken@users.sf.net>

	* vte.c:
	  - Add vte_terminal_{get|set}_font_options(),
	    vte_terminal_get_text_selected{_full}(), vte_terminal_get_text_range_format()
	    and vte_terminal_check_{match|hyperlink|regex_array|regex_simple}_at().
	  - vte_terminal_paste_clipboard() pastes text from clipboard instead of
	    primary selection.
	  - Emit "selection-changed" signal in vte-0.18.x or before.

	* vtetypebuiltins.c: Support vte 0.16.14 or before.

2024-05-03  Araki Ken  <arakiken@users.sf.net>

	* libind/Makefile.in: Remove %.
	  (https://github.com/arakiken/mlterm/issues/88)

	* Rename tables files in libind from *.c to libind_*.c.

2024-02-26  Araki Ken  <arakiken@users.sf.net>

	* c_imagelib.c: Fix compiling error.

2024-02-24  Araki Ken  <arakiken@users.sf.net>

	* cocoa.[hm], cocoatouch.m:
	  Add hasAlpha to arguments of MLTermView::copyArea and view_copy_area().
	  If hasAlpha is true, call CGCOntextSetBlendMode(kCGBlendModeNormal).

	* quartz/ui_window.c:
	  ui_window_copy_area() calls view_copy_area() with hasAlpha=1 if mask is not NULL.

	* encodefilter/module/Makefile.in, configure.in:
	  Link ../src/libmef.la to libmef_XXXX.la instead of @EF_CHARA_LO@.

	* MLTermPty.java: Load MLTermPty.dll from ~/.mlterm/java all the time.

2024-02-17  Araki Ken  <arakiken@users.sf.net>

	* vt_parser.c:
	  - Support U+FE0E and U+FE0F.
	  - Make the 1st U+1F1E6 - U+1F1FF (regional indicator symbol letter a-z) char
	    fullwidth and combine the 2nd char to the 1st.
	  - Make U+1F3FB - U+1F3FF (emoji modifier fitzpatric type 1-6) char zerowidth.

	* vt_screen.[ch]: Add vt_screen_unhighlight_cursor().

	* vt_char.[ch]:
	  Add vt_char_set_{fullwidth|zerowidth}() and vt_char_unset_picture().

2024-02-05  Araki Ken  <arakiken@users.sf.net>

	* vt_ot_layout.c: Skip pictures in layouting characters in vt_ot_layout().

	* Fix pull request #83.
	  - Add "use_locked_title" to OSC 5379-5383.