@@ -1,3 +1,8 @@
+2024-05-06  Araki Ken  <arakiken@users.sf.net>
+
+	* xlib/ui_imagelib.c: load_sixel() supports less than 8 depth.
+	  (https://github.com/arakiken/mlterm/issues/93)
+
 2024-05-05  Araki Ken  <arakiken@users.sf.net>
 
 	* vte.c:
